--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  srv:
+  doc:
     runs-on: ubuntu-latest
 
     steps:
@@ -33,6 +33,6 @@ jobs:
           fqdn: classroom.alaturka.dev
           jekyll: false
           target_branch: gh-pages
-          build_dir: srv/.vuepress/dist
+          build_dir: doc/.vuepress/dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
