--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@snippetors/vuepress-plugin-code-copy": "1.1.1",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "@vuepress/plugin-google-analytics": "^2.0.0-beta.36",
     "@vuepress/plugin-toc": "^2.0.0-beta.7",
     "eslint": "^8.6.0",
     "markdownlint-cli": "^0.30.0",
